[package]
name = "kaku"
version = "0.1.1"
edition = "2021"
description = "A text rendering crate for wgpu using signed distance fields"
repository = "https://github.com/villuna/kaku"
readme = "README.md"
license = "MIT"
keywords = ["graphics", "text", "wgpu"]
categories = ["graphics", "rendering"]
exclude = ["examples/", "images/", ".gitignore"]

[dependencies]
ab_glyph = "0.2.30"
ahash = "0.8.12"
image = "0.25.6"
itertools = "0.14.0"
wgpu = "26.0.1"
log = "0.4.27"
bytemuck = { version = "1.23.1", features = [ "derive" ] }
rayon = "1.11.0"
priority-queue = "2.5.0"
ordered-float = "5.0.0"

[dev-dependencies]
winit = { version = "0.30.11", features = ["rwh_05"] }
env_logger = "0.11.8"
pollster = "0.4.0"
